--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.7.0",
     "@prisma/client": "^6.18.0",
     "dotenv": "^17.2.3",
+    "monaco-editor": "^0.54.0",
     "next": "16.0.0",
     "prisma": "^6.18.0",
     "react": "19.2.0",
